syntax = "proto3";

package grpcexpect.testing;

import "google/protobuf/empty.proto";

option go_package = "grpctesting";

service TestService {
  rpc EmptyCall(google.protobuf.Empty) returns (google.protobuf.Empty) {}
  rpc SimpleCall(SimpleRequest) returns (SimpleResponse) {}
  rpc ProcessFile(ProcessFileRequest) returns (ProcessFileResponse) {}
}

message SimpleRequest {
  string username = 1;
}

message SimpleResponse {
  string message = 1;
}

message ProcessFileRequest {
  bytes name = 1;
  bytes data = 2;
}

message ProcessFileResponse {}
